--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,6 @@ version: '3'
 services:
   web:
     build: .
-    command: sh -c "uvicorn src.app.server:app --port=8000 --host=0.0.0.0"
+    command: sh -c "uvicorn hw_pp.app.server:app --port=8000 --host=0.0.0.0"
     ports:
       - 8000:8000
